# avm-vdriver

./: .gitignore  CMakeLists.txt
cmake/: gen.cmake
include/: commandlineparser.h  device.h  deviceparser.h  deviceserviceparser.h  engine.h  serviceparser.h  settings.h  tcpclient.h
include/vdriver/: commandlineparser.h  defaults.h  device.h  deviceparser.h  deviceserviceparser.h  engine.h  modbustcpserver.h  serviceparser.h  settings.h  tcpclient.h  tcpserver.h
package/src/deb-scripts/: conffiles  postinst  postrm  prerm
package/src/debian/: changelog
package/src/service/: avm-vdriver.service  vdriver.service
src/: commandlineparser.cpp  device.cpp  deviceparser.cpp  deviceserviceparser.cpp  engine.cpp  main.cpp  serviceparser.cpp  serviceparser.h  settings.cpp  tcpclient.cpp  tcpserver.cpp
